<resources>
    <string name="app_name">GroceBay</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_re_enter">Re enter password</string>
    <string name="create_account">Create Account</string>
    <string name="login_link">Already has account! Login here</string>
    <string name="register_link">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="noprodtext">No product available</string>
    <string name="actioncart">Cart</string>
    <string name="address">Address</string>
</resources>
